--- a/models_building.ipynb
+++ b/models_building.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -471,13 +471,13 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#separating attributes and label\n",
+    "#separating attributes and labels\n",
     "label = data.iloc[:, 1].values\n",
     "attributes_data = data.drop('is_canceled', axis=1)\n",
     "attributes_data.head(5)"
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -589,6 +589,272 @@
     "print(attributes[0:5])\n",
     "print('\\nAttributes lenght: ', + len(attributes))\n",
     "print('Labels lenght: ', + len(label))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Decision Tree Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "from sklearn.tree import DecisionTreeClassifier\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "                       max_features=None, max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, presort=False,\n",
+       "                       random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#split train x test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(attributes, label, test_size=0.3, random_state=0)\n",
+    "\n",
+    "#training decision tree classifier\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#making predictions\n",
+    "predicts = model.predict(X_test)\n",
+    "cm = confusion_matrix(y_test, predicts)\n",
+    "acc = accuracy_score(y_test, predicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "\n",
+      "[[22371     0]\n",
+      " [    0 13446]]\n",
+      "\n",
+      "Accuracy:  100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Confusion Matrix:\\n')\n",
+    "print(cm)\n",
+    "print('\\nAccuracy: ', + acc*100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\---EDUCASAT---\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "\n",
+      "[[22366     5]\n",
+      " [  383 13063]]\n",
+      "\n",
+      "Accuracy:  98.9167155261468\n"
+     ]
+    }
+   ],
+   "source": [
+    "#making predictions\n",
+    "predicts = model.predict(X_test)\n",
+    "cm = confusion_matrix(y_test, predicts)\n",
+    "acc = accuracy_score(y_test, predicts)\n",
+    "\n",
+    "print('Confusion Matrix:\\n')\n",
+    "print(cm)\n",
+    "print('\\nAccuracy: ', + acc*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      1.00      0.99     22371\n",
+      "           1       1.00      0.97      0.99     13446\n",
+      "\n",
+      "    accuracy                           0.99     35817\n",
+      "   macro avg       0.99      0.99      0.99     35817\n",
+      "weighted avg       0.99      0.99      0.99     35817\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, predicts))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Naive Bayes (GaussianNB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GaussianNB(priors=None, var_smoothing=1e-09)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "model = GaussianNB()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "\n",
+      "[[22097   274]\n",
+      " [    0 13446]]\n",
+      "\n",
+      "Accuracy:  99.23500013959851\n"
+     ]
+    }
+   ],
+   "source": [
+    "#making predictions\n",
+    "predicts = model.predict(X_test)\n",
+    "cm = confusion_matrix(y_test, predicts)\n",
+    "acc = accuracy_score(y_test, predicts)\n",
+    "\n",
+    "print('Confusion Matrix:\\n')\n",
+    "print(cm)\n",
+    "print('\\nAccuracy: ', + acc*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      0.99     22371\n",
+      "           1       0.98      1.00      0.99     13446\n",
+      "\n",
+      "    accuracy                           0.99     35817\n",
+      "   macro avg       0.99      0.99      0.99     35817\n",
+      "weighted avg       0.99      0.99      0.99     35817\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, predicts))"
    ]
   }
  ],
