change some comments

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -144,6 +144,7 @@
     }
    ],
    "source": [
+    "#checking outliers in lead_time variable\n",
     "sns.boxplot(data['hotel'], data['lead_time'], orient=\"v\")"
    ]
   },
@@ -190,7 +191,8 @@
     "        leadtime_log.append(np.log(value+1))\n",
     "    else:\n",
     "        leadtime_log.append(np.log(value))\n",
-    "\n",
+    "        \n",
+    "#checking if persists the same samples size\n",
     "print(len(leadtime_log))"
    ]
   },
