--- a/models_building.ipynb
+++ b/models_building.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -592,6 +592,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "\n",
+    "#split train x test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(attributes, label, test_size=0.3, random_state=0)\n",
+    "\n",
+    "#function for model training and report\n",
+    "def model_report(model):\n",
+    "    model.fit(X_train, y_train)\n",
+    "    predicts = model.predict(X_test)\n",
+    "    cm = confusion_matrix(y_test, predicts)\n",
+    "    acc = accuracy_score(y_test, predicts)\n",
+    "    cr = classification_report(y_test, predicts)\n",
+    "    print('Confusion Matrix:\\n')\n",
+    "    print(cm)\n",
+    "    print('\\nAccuracy: ', +  acc*100)\n",
+    "    print('\\nClassification Report:')\n",
+    "    print(cr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -600,60 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
-    "from sklearn.tree import DecisionTreeClassifier\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
-       "                       max_features=None, max_leaf_nodes=None,\n",
-       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, presort=False,\n",
-       "                       random_state=None, splitter='best')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#split train x test\n",
-    "X_train, X_test, y_train, y_test = train_test_split(attributes, label, test_size=0.3, random_state=0)\n",
-    "\n",
-    "#training decision tree classifier\n",
-    "model = DecisionTreeClassifier()\n",
-    "model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#making predictions\n",
-    "predicts = model.predict(X_test)\n",
-    "cm = confusion_matrix(y_test, predicts)\n",
-    "acc = accuracy_score(y_test, predicts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -665,14 +638,27 @@
       "[[22371     0]\n",
       " [    0 13446]]\n",
       "\n",
-      "Accuracy:  100.0\n"
+      "Accuracy:  100.0\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     22371\n",
+      "           1       1.00      1.00      1.00     13446\n",
+      "\n",
+      "    accuracy                           1.00     35817\n",
+      "   macro avg       1.00      1.00      1.00     35817\n",
+      "weighted avg       1.00      1.00      1.00     35817\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print('Confusion Matrix:\\n')\n",
-    "print(cm)\n",
-    "print('\\nAccuracy: ', + acc*100)"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "#training decision tree classifier\n",
+    "dtc = DecisionTreeClassifier()\n",
+    "model_report(dtc)"
    ]
   },
   {
@@ -684,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -696,35 +682,6 @@
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
-       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
-       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
-       "                   warm_start=False)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -733,30 +690,9 @@
       "[[22366     5]\n",
       " [  383 13063]]\n",
       "\n",
-      "Accuracy:  98.9167155261468\n"
-     ]
-    }
-   ],
-   "source": [
-    "#making predictions\n",
-    "predicts = model.predict(X_test)\n",
-    "cm = confusion_matrix(y_test, predicts)\n",
-    "acc = accuracy_score(y_test, predicts)\n",
-    "\n",
-    "print('Confusion Matrix:\\n')\n",
-    "print(cm)\n",
-    "print('\\nAccuracy: ', + acc*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Accuracy:  98.9167155261468\n",
+      "\n",
+      "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.98      1.00      0.99     22371\n",
@@ -770,7 +706,10 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test, predicts))"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "model_report(lr)"
    ]
   },
   {
@@ -786,29 +725,6 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GaussianNB(priors=None, var_smoothing=1e-09)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "\n",
-    "model = GaussianNB()\n",
-    "model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -817,30 +733,9 @@
       "[[22097   274]\n",
       " [    0 13446]]\n",
       "\n",
-      "Accuracy:  99.23500013959851\n"
-     ]
-    }
-   ],
-   "source": [
-    "#making predictions\n",
-    "predicts = model.predict(X_test)\n",
-    "cm = confusion_matrix(y_test, predicts)\n",
-    "acc = accuracy_score(y_test, predicts)\n",
-    "\n",
-    "print('Confusion Matrix:\\n')\n",
-    "print(cm)\n",
-    "print('\\nAccuracy: ', + acc*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Accuracy:  99.23500013959851\n",
+      "\n",
+      "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      0.99      0.99     22371\n",
@@ -854,7 +749,10 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test, predicts))"
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "nb = GaussianNB()\n",
+    "model_report(nb)"
    ]
   }
  ],
